[metadata]
name = Waldo
author = Ballyn Miller

[files]
packages =
    api

[entry_points]
console_scripts =
    waldo = api:run

[nosetests]
cover-branches = true
cover-erase = true
cover-inclusive = true
cover-min-percentage = 100
cover-package = api
match = ^test
where = tests
with-coverage = true
